<?xml version="1.0"?>
<package format="2">
  <name>asv_bringup</name>
  <version>0.0.0</version>
  <description>The asv_bringup package</description>

  <maintainer email="akashp1997@todo.todo">Akash Purandare</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>asv_description</exec_depend>
  <exec_depend>asv_sensors</exec_depend>

</package>
